--- a/enterprise-kyverno-operator/templates/cr-kyverno.yaml
+++ b/enterprise-kyverno-operator/templates/cr-kyverno.yaml
@@ -8,6 +8,7 @@ metadata:
   name: kyverno
   namespace: {{ template "enterprise-kyverno.namespace" . }}
 spec:
+  secrets: operator-params
   namespace: {{ include "kyverno.namespace" . }}
   repository: {{ .Values.kyverno.image.repository }}
   version: {{ .Values.kyverno.image.tag }}
